--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
     <title>Landing</title>
 </head>
 <body>
+    <div class="layer">
   <div class="title">
-    <h1>What is Lorem Ipsum?</h1>
+        <h1>What is Lorem Ipsum?</h1>
     <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</h2>
-  </div>
-  <div class="layer">
-      <article class="kk"></article>
-       <h3>Kontakt</h3></div>
+      <article class="kk">
+       <h3>Kontakt</h3></article>
       <form>
   <div>
-      <input type="text" placeholder="Your name">
+      <input type="text" placeholder="Your name" size="51">
   </div>
   <div>
-      <input type="email" placeholder="Your email">
+      <input type="email" placeholder="Your email" size="51">
   </div>
-  <div>
-      <input type="text" placeholder="Subject">
-  </div>
-  <div>
+   <div>
       <button class="button" type="submit">GO</button>
   </div>
       </form>
+    </div>
+</div>
 </body>
 </html>
