--- a/index.html
+++ b/index.html
@@ -6,29 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Landing</title>
 </head>
 <body>
-    <div class="layer">
-  <div class="title">
-        <h1>What is Lorem Ipsum?</h1>
-    <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</h2>
-      <article class="kk">
-       <h3>Kontakt</h3></article>
-      <form>
-  <div>
-      <input type="text" placeholder="Your name" size="51">
-  </div>
-  <div>
-      <input type="email" placeholder="Your email" size="51">
-  </div>
-   <div>
-      <button class="button" type="submit">GO</button>
-  </div>
-      </form>
+    <section class="splash">
+        <div class="overlay">
+        <img src="images/tlo.jpg" width="200%" alt="" >  
+            <div class="splash-inner">
+            <div class="log">
+        <img src="images/zadanie-golden.png" alt="" >   
+        <h2><i>Welcome to our studio</i></h2>
+        <h1>IT'S NICE TO MEET YOU</h1>
+           <div>
+            <button class="btn" type="submit">TELL ME MORE</button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+    </section>
 </body>
 </html>
