--- a/index.html
+++ b/index.html
@@ -7,24 +7,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Landing</title>
 </head>
 <body>
     <section class="splash">
         <div class="overlay">
-        <img src="images/tlo.jpg" width="200%" alt="" >  
+        <img src="images/welcome.png" width="200%" alt="" >  
             <div class="splash-inner">
-            <div class="log">
-        <img src="images/zadanie-golden.png" alt="" >   
-        <h2><i>Welcome to our studio</i></h2>
-        <h1>IT'S NICE TO MEET YOU</h1>
+               <img src="images/zadanie-golden.png" alt="" >   
+            <h1>IT'S NICE TO MEET YOU</h1>
            <div>
             <button class="btn" type="submit">TELL ME MORE</button>
-          </div>
         </div>
-      </div>
-    </div>
-    </section>
-</body>
+        </div>
+        </div>
+      </section>
+      <section class="services">
+        <div class="container">
+             <h2>SERVICES</h2>
+             <div class="img_2">
+             <img src="images/proin.png" alt="" >
+             <div class="img_3"></div>
+             <img src="images/znak.png" alt="" >
+        </div>
+        </div>
+        <div class="box-wrapper">
+          <div class="box">
+            <h3 class="design">E-Commerce</h3>
+            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+          </div>
+          <div class="box_2">
+            <h3 class="design">Responsive Web</h3>
+            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+          </div>
+          <div class="box_3">
+            <h3 class="design">Web Security</h3>
+            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+          </div></div>
+        </section>
+    </body>
 </html>
