dalsza cz strony

--- a/index.html
+++ b/index.html
@@ -24,28 +24,53 @@
         </div>
         </div>
       </section>
-      <section class="services">
+      <section class="project">
         <div class="container">
+        <div class="services">
              <h2>SERVICES</h2>
              <div class="img_2">
              <img src="images/proin.png" alt="" >
-             <div class="img_3"></div>
-             <img src="images/znak.png" alt="" >
+             </div>
+            </div>
+            <div class="box-wrapper">
+            <div class="icon">
+             <div class="image_1">
+               <img src="images/koszyk.png" alt="" >
+                  <h3>E-Commerce</h3>
+               <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+           </div>
         </div>
-        </div>
-        <div class="box-wrapper">
-          <div class="box">
-            <h3 class="design">E-Commerce</h3>
+        <div class="image_1">
+        <img src="images/ok.png" alt="" >
+        <h3>Responsive Web</h3>
+    <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+     </div>  
+   <div class="image_1">
+   <img src="images/klodka.png" alt="" >
+   <h3>Web Security</h3>
             <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
+      </div></div></div>
+        </section>
+        <section class="portfolio">
+          <div class="container">
+          <div class="services">
+            <h2>OUR PORTFOLIO</h2>
+            <div class="img_2">
+              <img src="images/proin.png" alt="" >
+            </div>
+         </div>
+         <div class="projects flex-wrapper">
+          <div class="project">
+ <div class="image">
+  <img src="images/F1.png" alt="" >
+</div>
+<div class="image">
+  <img src="images/F2.png" alt="" >
+</div>
+<div class="image">
+  <img src="images/F3.png" alt="" >
+ </div></div></div>
           </div>
-          <div class="box_2">
-            <h3 class="design">Responsive Web</h3>
-            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
-          </div>
-          <div class="box_3">
-            <h3 class="design">Web Security</h3>
-            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
-          </div></div>
         </section>
     </body>
 </html>
