dodanie podtytułlów portf

--- a/index.html
+++ b/index.html
@@ -12,65 +12,94 @@
     <title>Landing</title>
 </head>
 <body>
-    <section class="splash">
-        <div class="overlay">
-        <img src="images/welcome.png" width="200%" alt="" >  
-            <div class="splash-inner">
-               <img src="images/zadanie-golden.png" alt="" >   
-            <h1>IT'S NICE TO MEET YOU</h1>
-           <div>
-            <button class="btn" type="submit">TELL ME MORE</button>
+   <section class="splash">
+    <div class="overlay">
+      <img src="images/welcome.png" width="200%" alt="">
+      <img class="logo" src="images/zadanie-golden.png" alt="">
+      <div class="splash-inner">
+        <nav class="navigation">
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">PORTFOLIO</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>   
+        </nav>
+        <h1>IT'S NICE TO MEET YOU</h1>
+        <div>
+          <button class="btn" type="submit">TELL ME MORE</button>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="project">
+    <div class="container">
+      <div class="services">
+        <h2>SERVICES</h2>
+        <div class="img_2">
+          <img src="images/proin.png" alt="">
         </div>
-        </div>
-      </section>
-      <section class="project">
-        <div class="container">
-        <div class="services">
-             <h2>SERVICES</h2>
-             <div class="img_2">
-             <img src="images/proin.png" alt="" >
-             </div>
-            </div>
-            <div class="box-wrapper">
-            <div class="icon">
-             <div class="image_1">
-               <img src="images/koszyk.png" alt="" >
-                  <h3>E-Commerce</h3>
-               <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
-           </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="image_1">
+          <img src="images/koszyk.png" alt="" >
+          <h3>E-Commerce</h3>
+          <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque<br>Vivamus est diam, rhoncus ut</p>
         </div>
         <div class="image_1">
-        <img src="images/ok.png" alt="" >
-        <h3>Responsive Web</h3>
-    <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
-     </div>  
-   <div class="image_1">
-   <img src="images/klodka.png" alt="" >
-   <h3>Web Security</h3>
-            <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque orci,quis<br>Vivamus est diam, rhoncus ut</p>
-      </div></div></div>
-        </section>
-        <section class="portfolio">
-          <div class="container">
-          <div class="services">
-            <h2>OUR PORTFOLIO</h2>
-            <div class="img_2">
-              <img src="images/proin.png" alt="" >
-            </div>
-         </div>
-         <div class="projects flex-wrapper">
-          <div class="project">
- <div class="image">
-  <img src="images/F1.png" alt="" >
-</div>
-<div class="image">
-  <img src="images/F2.png" alt="" >
-</div>
-<div class="image">
-  <img src="images/F3.png" alt="" >
- </div></div></div>
+          <img src="images/ok.png" alt="" >
+          <h3>Responsive Web</h3>
+          <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque<br>Vivamus est diam, rhoncus ut</p>
+        </div>
+        <div class="image_1">
+          <img src="images/klodka.png" alt="" >
+          <h3>Web Security</h3>
+          <p class="des-1">dolor sit amet, consectetur adipiscing <br>elit.Suspendisse elementum neque<br>Vivamus est diam, rhoncus ut</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="portfolio">
+    <div class="container">
+      <div class="services">
+        <h2>OUR PORTFOLIO</h2>
+        <div class="img_2">
+          <img src="images/proin.png" alt="" >
+        </div>
+      </div>
+      <div class="projects flex-wrapper">
+        <div class="project">
+          <div class="image">
+            <img src="images/F1.png" alt="" >
           </div>
-        </section>
-    </body>
+          <div class="image">
+            <img src="images/F2.png" alt="" >
+          </div>
+          <div class="image">
+            <img src="images/F3.png" alt="" >
+          </div>
+        </div>
+      </div>
+      <div class="projects flex-wrapper">
+        <div class="project">
+          <div class="image">
+            <img src="images/F4.png" alt="" >
+          </div>
+          <div class="image">
+            <img src="images/F5.png" alt="" >
+          </div>
+          <div class="image">
+            <img src="images/F6.png" alt="" >
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+    </div>
+  </footer>
+</body>
 </html>
