--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+
     <link rel="stylesheet" href="css/style.css">
     <title>Landing</title>
 </head>
 <body>
-   <section class="splash">
+  <section class="splash">
     <div class="overlay">
       <img src="images/welcome.png" width="200%" alt="">
-      <img class="logo" src="images/zadanie-golden.png" alt="">
-      <div class="splash-inner">
+      <div class="navi">
         <nav class="navigation">
-          <ul>
+           <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">CONTACT</a></li>
-          </ul>   
+          </ul>
         </nav>
+      </div>  
+    </div>
+      <img class="logo" src="images/zadanie-golden.png" alt="">
+      <div class="splash-inner">
         <h1>IT'S NICE TO MEET YOU</h1>
         <div>
           <button class="btn" type="submit">TELL ME MORE</button>
         </div>
-      </div>
     </div>
   </section>
   <section class="project">
@@ -71,26 +75,38 @@
       <div class="projects flex-wrapper">
         <div class="project">
           <div class="image">
-            <img src="images/F1.png" alt="" >
+            <img src="images/F1bez.png" alt="" >
+              <h4>Ebony and Ivory</h4>
+              <img src="images/p1.png" alt="" >
           </div>
           <div class="image">
-            <img src="images/F2.png" alt="" >
+            <img src="images/F2bez.png" alt="" >
+            <h4>Smart Station</h4>
+            <img src="images/pF2.png" alt="" >
           </div>
           <div class="image">
-            <img src="images/F3.png" alt="" >
+            <img src="images/F3bez.png" alt="" >
+            <h4>Clever Poster</h4>
+            <img src="images/pF2.png" alt="" >
           </div>
         </div>
       </div>
       <div class="projects flex-wrapper">
-        <div class="project">
+        <div class="two_project">
           <div class="image">
-            <img src="images/F4.png" alt="" >
+            <img src="images/F4bez.png" alt="" >
+            <h4>Vinyl Record</h4>
+            <img src="images/pF3.png" alt="" >
           </div>
           <div class="image">
-            <img src="images/F5.png" alt="" >
+            <img src="images/F5bez.png" alt="" >
+            <h4>Treehouse Template</h4>
+            <img src="images/pF5.png" alt="" >
           </div>
           <div class="image">
-            <img src="images/F6.png" alt="" >
+            <img src="images/F6bez.png" alt="" >
+            <h4>Burned Logo</h4>
+            <img src="images/p1.png" alt="" >
           </div>
         </div>
       </div>
@@ -99,6 +115,12 @@
   <footer>
     <div class="container">
       <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+      <div class="icon">
+        <i class="fa-brands fa-twitter"></i>    
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-google-plus"></i>
+      </div>
     </div>
   </footer>
 </body>
