--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-
     <link rel="stylesheet" href="css/style.css">
     <title>Landing</title>
 </head>
@@ -17,20 +16,22 @@
   <section class="splash">
     <div class="overlay">
       <img src="images/welcome.png" width="200%" alt="">
-      <div class="navi">
-        <nav class="navigation">
-           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-          </ul>
-        </nav>
-      </div>  
     </div>
       <img class="logo" src="images/zadanie-golden.png" alt="">
       <div class="splash-inner">
+        <div class="navi">
+          <div class="container">
+          <nav class="navigation">
+            <ol>
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">SERVICES</a></li>
+              <li><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ol>
+          </nav>
+        </div> 
+        </div>  
         <h1>IT'S NICE TO MEET YOU</h1>
         <div>
           <button class="btn" type="submit">TELL ME MORE</button>
