--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               <li><a href="#">CONTACT</a></li>
             </ol>
           </nav>
+        </div>
         </div> 
-        </div>  
         <h1>IT'S NICE TO MEET YOU</h1>
         <div>
           <button class="btn" type="submit">TELL ME MORE</button>
@@ -77,8 +77,8 @@
         <div class="project">
           <div class="image">
             <img src="images/F1bez.png" alt="" >
-              <h4>Ebony and Ivory</h4>
-              <img src="images/p1.png" alt="" >
+            <h4>Ebony &amp; Ivory</h4>
+            <img src="images/p1.png" alt="" >
           </div>
           <div class="image">
             <img src="images/F2bez.png" alt="" >
@@ -117,7 +117,7 @@
     <div class="container">
       <p>&copy; Copyright 2014 FreebiesXpress.com</p>
       <div class="icon">
-        <i class="fa-brands fa-twitter"></i>    
+        <i class="fa-brands fa-twitter"></i>   
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-pinterest"></i>
         <i class="fa-brands fa-google-plus"></i>
