--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 </head>
 <body>
   <section class="splash">
-    <div class="overlay">
-      <img src="images/welcome.png" width="210%" alt="">
+    <div class="backside">
+      <img src="images/welcome.png"  alt="">
+    </div>
+    <div class="splash-inner">
       <img class="logo" src="images/zadanie-golden.png" alt="">
-      <div class="splash-inner">
-        <div class="navi">
-          <div class="container">
-            <nav class="navigation">
              <ol>
                <li><a href="#">HOME</a></li>
                <li><a href="#">SERVICES</a></li>
@@ -28,14 +26,8 @@
                <li><a href="#">ABOUT</a></li>
                <li><a href="#">CONTACT</a></li>
              </ol>
-            </nav>
-          </div>
-        </div>
-        <h1>IT'S NICE TO MEET YOU</h1>
-        <div>
-          <button class="btn" type="submit">TELL ME MORE</button>
-        </div>
-      </div>
+                <h1>IT'S NICE TO MEET YOU</h1>
+                <button class="btn" type="submit">TELL ME MORE</button>
     </div>
   </section>
   <section class="project">
