--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     </div>
     <div class="splash-inner">
       <img class="logo" src="images/zadanie-golden.png" alt="">
-             <ol>
-               <li><a href="#">HOME</a></li>
-               <li><a href="#">SERVICES</a></li>
-               <li><a href="#">PORTFOLIO</a></li>
-               <li><a href="#">ABOUT</a></li>
-               <li><a href="#">CONTACT</a></li>
-             </ol>
-                <h1>IT'S NICE TO MEET YOU</h1>
-                <button class="btn" type="submit">TELL ME MORE</button>
+      <nav  class="menu">      
+        <ol>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">SERVICES</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ol>
+      </nav> 
+        <h1>IT'S NICE TO MEET YOU</h1>
+        <button class="btn" type="submit">TELL ME MORE</button>
     </div>
   </section>
   <section class="project">
